--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": [
+              "node_modules/popper.js/dist/umd/popper.js",
               "node_modules/jquery/dist/jquery.js",
               "node_modules/bootstrap-material-design/dist/js/bootstrap-material-design.min.js",
               "node_modules/moment/moment.js",
