--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "angular-confirmation-popover": "~6.0.0",
     "angular2-ladda": "~3.1.0",
     "angular2-text-mask": "~9.0.0",
+    "angularx-qrcode": "^10.0.11",
     "bootstrap": "~4.4.1",
     "chart.js": "~2.9.3",
     "chartist": "~0.11.0",
@@ -68,7 +69,7 @@
     "ng2-dragula": "~2.1.1",
     "ng2-file-upload": "~1.4.0",
     "ng2-nouislider": "~1.8.2",
-    "ng2-password-strength-bar": "~1.2.0",
+    "ng2-password-strength-bar": "^1.2.4",
     "ng2-smart-table": "~1.6.0",
     "ngx-chips": "~2.1.0",
     "ngx-clipboard": "~13.0.0",
